--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "nico-ui",
-  "version": "1.0.0",
-  "description": "NicoUi项目还在开发当中...",
+  "name": "NicoUi",
+  "version": "0.0.1",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RenLishisan/Nico-Ui.git"
+    "url": "git@github.com:RenLishisan/Nico-Ui.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/RenLishisan/Nico-Ui/issues"
+    "url": "https://github.com/RenLishisan/Nico-Ui"
   },
-  "homepage": "https://github.com/RenLishisan/Nico-Ui#readme",
+  "homepage": "https://github.com/RenLishisan/Nico-Ui",
   "devDependencies": {
-    "webpack": "^5.42.0",
-    "webpack-cli": "^4.7.2"
+    "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^3.2.0",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   }
 }
