--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "NicoUi",
   "version": "0.0.1",
   "description": "Nico-Ui是一款基于React开发的Ui框架",
-  "main": "index.js",
+  "main": "dist/lib/index.js",
+  "types": "dist/lib/index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
