--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NicoUi",
+  "name": "nico-ui",
   "version": "0.0.1",
   "description": "Nico-Ui是一款基于React开发的Ui框架",
   "main": "dist/lib/index.js",
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.0.6",
     "react-test-renderer": "^17.0.2",
+    "svg-sprite-loader": "^6.0.9",
     "ts-jest": "^27.0.4",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
