🤖‍‍ 重构依赖树 & 新增对scss的支持

--- a/package.json
+++ b/package.json
@@ -22,27 +22,34 @@
   },
   "homepage": "https://github.com/RenLishisan/Nico-Ui",
   "devDependencies": {
-    "@babel/preset-env": "^7.14.8",
-    "@babel/preset-react": "^7.14.5",
-    "@types/jest": "^26.0.24",
-    "@types/react-test-renderer": "^17.0.1",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.9",
+    "@types/react": "^16.8.7",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-test-renderer": "^16.8.1",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^24.3.1",
+    "babel-preset-react-app": "^7.0.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^27.0.6",
-    "react-test-renderer": "^17.0.2",
-    "svg-sprite-loader": "^6.0.9",
-    "ts-jest": "^27.0.4",
+    "jest": "^24.3.1",
+    "node-sass": "npm:sass",
+    "react-test-renderer": "^16.8.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "svg-sprite-loader": "^4.1.3",
+    "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "@types/react": "^17.0.13",
-    "@types/react-dom": "^17.0.8",
-    "cross-env": "^7.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
   }
 }
